# nyaadownloader

./: .gitignore  LICENSE  NyaaDownloader.py  README.md  auto-download-torrents.py  config.ini  main.pyw  nyaa-downloader.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
NyaaDownloader/: __main__.py  gui.py  nyaa.py
data/: NyaaDownloader.desktop
lib/: gui.py  nyaa.py
pyqt-ui/: base.ui
util/: gui.py  nyaa.py  torrent_parser.py
